# kotl

./: .gitignore  CMakeLists.txt  DATABASE_MANAGEMENT.md  DEPLOYMENT.md  HOW_TO_CREATE_LOGIN.md  README.md  build-exe.bat  build-native.bat  build.bat  build.gradle.kts  database.js  env.example  gradlew.bat  index.html  package-lock.json  package.json  server.js  setup-env.js  setup-nginx.sh  setup-ubuntu.sh  simple_main.cpp
c2/: HOW_TO_CREATE_LOGIN.md  README.md  SECURITY.md  database.js  ecosystem.config.js  env.example  manage-db.js  nginx-webpanel.conf  package.json  server.js  setup-env.sh
c2/client/public/: index.html
c2/client/src/: App.css  App.js  index.css
c2/client/src/components/: Header.js  Login.js  LogsTable.js  Sidebar.js
c2/client/src/pages/: DashboardPage.js  LogDetailPage.js  PayloadBuilderPage.js  PurchasePage.js  SettingsPage.js  StatisticsPage.js
client/: package-lock.json  package.json
client/public/: index.html
client/src/: App.js  theme.js
client/src/components/: Header.js  Login.js  LogsTable.js  Sidebar.js
client/src/pages/: LogDetailPage.js  SettingsPage.js  StatisticsPage.js  TimelinePage.js
features to have/: data to extract.txt  keywords.txt  stuff to extract.txt
include/: browser_data.h  crypto_wallets.h  data_structures.h  discord_tokens.h  important_files.h  network.h  resource.h  system_info.h  utils.h
output/Brave/Default/: cookies.json  passwords.json
output/Chrome/Default/: cookies.json
output/Edge/Default/: cookies.json
src/: browser_data.cpp  crypto_wallets.cpp  discord_tokens.cpp  important_files.cpp  main.cpp  network.cpp  resources.rc  system_info.cpp  utils.cpp
src/main/kotlin/: Main.kt
whattobaseoffof/: mainkt.txt
